# xeos

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
ci/: environment.yml
conda/: README.md  meta.yaml
docs/: api.md  conf.py  index.md  installation.md  requirements.txt  usage.md
xeos/: __init__.py  api.py  conventions.py  eos.py  models.py  registry.py  version.py  xarray_utils.py
xeos/backends/: __init__.py  _jmd95.py  _linear.py  _mdjwf.py  _mpas.py  _roquet.py  _roquet_idealized.py  _roquet_spv.py  _teos10.py  _unesco.py  _wright.py
xeos/tests/: test_api.py  test_backends.py  test_eos.py  test_models.py
xeos/tests/reference/: .gitignore  README.md  _build_mitgcm_fortran.py  _build_mpas_eos_fortran.py  _build_roquet_spv_fortran.py  _build_seawaterpolynomials_julia.py  _build_unesco_fortran.py  _build_wright_fortran.py  environment.yml  generate_truth.py  truth.json
